deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: e-commerce
spec:
  replicas: 2
  selector:
    matchLabels:
      apps: e-commerce-website
  template:
    metadata:
      labels:
        apps: e-commerce-website
    spec:
      containers:
      - name: e-commerce-container
        image: ojosamuel/e-commerce
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-web-svc
  namespace: e-commerce
spec:
  selector:
    apps: e-commerce-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
